@@ -3,6 +3,8 @@ CHANGES.txt - 2008-07-25
 
 CHANGES IN CUPS V1.4b1
 
+	- Added support for custom options in the web interface
+	  (STR #1729)
 	- Added support for Mozilla LDAP, reconnection to LDAP servers,
 	  and improved LDAP performance (STR #1962)
 	- Added Solaris SMF support (STR #1477)
